# shieldcortex-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: audit_export.py  basic_scan.py  batch_scanning.py  crewai_memory.py  langchain_callback.py
src/shieldcortex/: __init__.py  _http.py  async_client.py  client.py  errors.py  pagination.py  types.py
src/shieldcortex/integrations/: crewai.py  langchain.py
tests/: conftest.py  fixtures.py  test_client.py  test_errors.py  test_pagination.py  test_types.py
tests/integrations/: test_crewai.py
