[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shieldcortex"
version = "0.1.0"
description = "Official Python SDK for the ShieldCortex API — AI memory security scanning"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [
    { name = "Drakon Systems Ltd", email = "support@shieldcortex.ai" },
]
keywords = [
    "shieldcortex",
    "ai",
    "security",
    "memory",
    "firewall",
    "prompt-injection",
    "defence",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.27.0",
]

[project.optional-dependencies]
crewai = ["crewai>=0.28.0"]
langchain = ["langchain-core>=0.1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
    "mypy>=1.8.0",
    "ruff>=0.2.0",
    "build>=1.0.0",
]

[project.urls]
Homepage = "https://shieldcortex.ai"
Documentation = "https://shieldcortex.ai/docs"
Repository = "https://github.com/Drakon-Systems-Ltd/shieldcortex-python"
"Bug Tracker" = "https://github.com/Drakon-Systems-Ltd/shieldcortex-python/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/shieldcortex"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.mypy]
strict = true
warn_unreachable = true
pretty = true
show_error_context = true

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
# UP007/UP045: Don't convert Optional[X] to X | None — types.py dataclass fields
# are evaluated at runtime by get_type_hints(), and X | None requires Python 3.10+.
ignore = ["UP007", "UP045"]
